# aac-example

./: .gitignore  CMakeLists.txt
include/: fdkaac_dec.h  fdkaac_enc.h
test/: dec_test.cpp  enc_test.cpp
